# WineRadar

./: .editorconfig  .env.example  .gitattributes  .gitignore  2026-03-08.html  2026-03-10.html  2026-03-11.html  2026-03-12.html  2026-03-13.html  AGENTS.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  analyze_wine21.py  date_storage.py  demo_pipeline.py  eda_quick.py  exceptions.py  index.html  main.py  nl_query.py  notifier.py  pyproject.toml  pytest.ini  raw_logger.py  requirements.txt  resilience.py  setup.cfg  test_all_sources.py  test_new_sources.py  test_wine21_collect.py  update_sources.py  wine_20260403.html  wine_20260403_summary.json  wine_20260404.html  wine_20260404_summary.json  wine_20260405.html  wine_20260405_summary.json  wine_20260406.html  (+220 more)
.claude/: settings.local.json
.github/workflows/: crawler.yml  deploy-pages.yml  pr-checks.yml  radar-crawler.yml  release.yml
analyzers/: __init__.py  entity_extractor.py  entity_normalizer.py  wine_entities_data.py
collectors/: __init__.py  base.py  browser_collector.py  html_collector.py  playwright_collector.py  registry.py  rss_collector.py
config/: config.yaml  frequency_words.txt  notifications.yaml  sources.yaml
config/categories/: wine.yaml
data/: radar_data.duckdb  search_index.db
data/kpi_logs/: kpi_2026-03-07.json  kpi_2026-04-11.json  kpi_2026-04-12.json  kpi_2026-04-13.json  kpi_2026-04-14.json  kpi_2026-04-15.json  kpi_2026-04-16.json  kpi_2026-04-17.json  kpi_2026-04-18.json  kpi_2026-04-19.json  kpi_2026-04-20.json  kpi_2026-04-21.json  kpi_2026-04-22.json  kpi_2026-04-23.json  kpi_2026-04-24.json  kpi_2026-04-25.json  kpi_2026-04-26.json  kpi_2026-04-27.json  kpi_2026-04-28.json  kpi_2026-04-29.json  kpi_2026-04-30.json  kpi_2026-05-01.json  kpi_2026-05-02.json  kpi_2026-05-03.json  kpi_2026-05-07.json  kpi_2026-05-14.json  kpi_2026-05-15.json  kpi_2026-05-16.json  kpi_2026-05-17.json  kpi_2026-05-18.json  kpi_2026-05-19.json  kpi_2026-05-20.json  kpi_2026-05-21.json  kpi_2026-05-22.json  kpi_2026-05-23.json  kpi_2026-05-24.json  kpi_2026-05-25.json  kpi_2026-05-26.json  kpi_2026-05-27.json  kpi_2026-05-28.json  (+57 more)
data/raw/2026-03-07/: ACE Vinos.jsonl  Decanter.jsonl  Enolife.jsonl  Gambero Rosso.jsonl  Jamie Goode's Wine Blog.jsonl  Punch.jsonl  Terre de Vins.jsonl  The Drinks Business.jsonl  Wine21.jsonl  (+7 more)
docs/: AI_TASK_TEMPLATE.md  API_SPEC.md  ARCHITECTURE.md  CLAUDE_SKILLS.yaml  CODING_GUIDE.md  CONSUMER_PLATFORMS_ANALYSIS.md  DATA_MODEL.md  DATA_SOURCES.md  DEPLOYMENT.md  ENCODING.md  FEATURE_SPEC.md  FINAL_SOURCE_PRIORITY.md  FINAL_TAXONOMY.md  GEOGRAPHIC_EXPANSION.md  KPI_METRICS.md  KPI_REPORT.md  MCP_SETUP.md  MCP_SPEC.md  OPTIMIZED_TAXONOMY.md  PHASE4_SUMMARY.md  PRD.md  RATING_PLATFORMS.md  REVIEW_REPORT.md  ROADMAP.md  RSS_FEED_VALIDATION.md  SOURCE_MONITORING.md  SOURCE_RELIABILITY_ASSESSMENT.md  SOURCE_STATUS.md  SOURCE_STRATEGY.md  SOURCE_TAXONOMY.md  SPEC_IMPLEMENTATION_COMPARISON.md  TAXONOMY_APPLICATION.md  TESTING_SUMMARY.md  TEST_QUALITY_IMPROVEMENT.md  USER_VIEW_METADATA_DESIGN.md  data-quality-plan.md
docs/reports/: 2025-11-19.html  2026-03-07.html  index.html
graph/: __init__.py  date_storage.py  exceptions.py  graph_queries.py  graph_store.py  models.py  scoring.py  search_index.py  vector_index.py
mcp_server/: __init__.py  manifest.json  server.py  server_stub.py  tools.py
notebooks/: eda_wineradar.ipynb
pushers/: __init__.py
quality_checks/: data_quality.py
radar/: __init__.py
reporters/: __init__.py  html_reporter.py  kpi_logger.py
reporters/templates/: daily_report.html
reports/: index.html  wine_20260403.html  wine_20260404.html  wine_20260404_summary.json  wine_20260405.html  wine_20260405_summary.json  wine_20260406.html  wine_20260406_summary.json  wine_20260407.html  wine_20260407_summary.json  wine_20260408.html  wine_20260408_summary.json  wine_20260409_summary.json  wine_20260410.html  wine_20260410_summary.json  wine_20260411.html  wine_20260411_summary.json  wine_20260412.html  wine_20260413.html  wine_20260413_quality.json  wine_20260413_summary.json  wine_20260414.html  wine_20260414_summary.json  wine_20260415.html  wine_20260415_summary.json  wine_20260418_summary.json  wine_20260420.html  wine_20260420_summary.json  wine_20260421_summary.json  wine_20260423_quality.json  wine_20260423_summary.json  wine_20260424.html  wine_20260425.html  wine_20260425_quality.json  wine_20260428_quality.json  wine_20260430.html  wine_20260430_summary.json  wine_20260501_summary.json  wine_20260507.html  wine_20260512.html  (+145 more)
scripts/: check_quality.py
tests/: __init__.py  conftest.py
tests/e2e/: test_daily_pipeline.py
tests/integration/: test_collection_pipeline.py  test_html_collection.py  test_view_queries.py
tests/unit/: test_analyzer.py  test_check_quality_script.py  test_collector_parallel.py  test_collector_retry.py  test_date_storage.py  test_event_model_wiring.py  test_korean_analyzer.py  test_main.py  test_main_pipeline_extensions.py  test_mcp_server.py  test_mcp_tools.py  test_metadata_pipeline_integration.py  test_nl_query.py  test_quality_report.py  test_raw_logger.py  test_reporter.py  test_search_index.py  test_storage.py  test_validators.py
tools/: discover_new_sources.py  monitor_sources.py
wineradar/: __init__.py  analyzer.py  collector.py  config_loader.py  exceptions.py  models.py  quality_report.py  raw_logger.py  reporter.py  resilience.py  search_index.py  storage.py
wineradar/common/: validators.py
wineradar/plugins/: __init__.py  network_graph.py
(+2456 files in other folders)
