# Setup configuration for WineRadar

[metadata]
name = wineradar
version = 0.1.0
description = Wine trend radar with graph-based link analysis
author = WineRadar Team
license = MIT
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.11
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

# Encoding settings
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --verbose
    --color=yes
markers =
    unit: Unit tests
    integration: Integration tests
    e2e: End-to-end tests

# Coverage settings
[coverage:run]
source = .
omit =
    */tests/*
    */venv/*
    */__pycache__/*
    */site-packages/*

[coverage:report]
precision = 2
show_missing = True
skip_covered = False

# Flake8 settings
[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .mypy_cache,
    .ruff_cache
extend-ignore = E203, W503
per-file-ignores =
    __init__.py:F401

# MyPy settings
[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-feedparser.*]
ignore_missing_imports = True

[mypy-bs4.*]
ignore_missing_imports = True

# Encoding for all text files
[tool:encoding]
default = utf-8
